Fix some spacing issues

--- a/main_files/style.css
+++ b/main_files/style.css
@@ -59,7 +59,7 @@ papertitle {
 .container {
   margin: 50px auto;
   padding: 5px;
-  max-width: 650px;
+  max-width: 900px;
 }
 @media (max-width: 600px) {
   .container {
